<resources>
    <string name="app_name">SwipeDragTreeRecyclerView</string>
    <string name="radioBtn_swipeDragRecyclerView">SwipeDragRecyclerView</string>
    <string name="radioBtn_swipeDragTreeRecyclerView">SwipeDragTreeRecyclerView</string>
    <string name="btn_start">Start</string>
    <string name="btn_open_itemView_long_click">open item long click</string>
    <string name="btn_close_itemView_long_click">close item long click</string>
    <string name="btn_open_customView_long_click">open custom long click</string>
    <string name="btn_close_customView_long_click">close custom long click</string>
    <string name="btn_open_customView_drag">open drag view</string>
    <string name="btn_close_customView_drag">close drag view</string>

    <string name="btn_open_swipe">open swipe</string>
    <string name="btn_close_swipe">close swipe</string>
    <string name="btn_open_drag">open drag</string>
    <string name="btn_close_drag">close drag</string>
    <string name="btn_open_swipe_background_color">open swipe color</string>
    <string name="btn_close_swipe_background_color">close swipe color</string>
    <string name="btn_open_memory_expand">open memory expand</string>
    <string name="btn_close_memory_expand">close memory expand</string>
    <string name="btn_expand_all">expand all</string>
    <string name="btn_unexpand_all">collapse all</string>


    <string name="radioGroup_layoutManager">layoutManager</string>
    <string name="radioBtn_linear">linear</string>
    <string name="radioBtn_grad">grid</string>
    <string name="radioBtn_staggered">staggered</string>

    <string name="radioGroup_orientation">orientation</string>
    <string name="radioBtn_vertical">vertical</string>
    <string name="radioBtn_horizontal">horizontal</string>

    <string name="checkBox_left">left</string>
    <string name="checkBox_right">right</string>
    <string name="checkBox_up">up</string>
    <string name="checkBox_down">down</string>

    <string name="numberPicker_dataCount">data</string>
    <string name="numberPicker_spanCount">span</string>
    <string name="numberPicker_levelCount">level</string>
    <string name="numberPicker_subCount1">sub1</string>
    <string name="numberPicker_subCount2">sub2</string>
    <string name="numberPicker_subCount3">sub3</string>
    <string name="numberPicker_subCount4">sub4</string>
</resources>
