<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.goweii.swipedragtreerecyclerview.activity.SwipeDragRecyclerViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_open_close_drag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_close_drag" />

                <RadioGroup
                    android:id="@+id/radioGroup_check_dragFlag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <CheckBox
                        android:id="@+id/checkBox_drag_flag_left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/checkBox_left" />

                    <CheckBox
                        android:id="@+id/checkBox_drag_flag_right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/checkBox_right" />

                    <CheckBox
                        android:id="@+id/checkBox_drag_flag_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/checkBox_up" />

                    <CheckBox
                        android:id="@+id/checkBox_drag_flag_down"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/checkBox_down" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_open_close_swipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_close_swipe" />

                <RadioGroup
                    android:id="@+id/radioGroup_check_swipeFlag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <CheckBox
                        android:id="@+id/checkBox_swipe_flag_left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/checkBox_left" />

                    <CheckBox
                        android:id="@+id/checkBox_swipe_flag_right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/checkBox_right" />

                    <CheckBox
                        android:id="@+id/checkBox_swipe_flag_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/checkBox_up" />

                    <CheckBox
                        android:id="@+id/checkBox_swipe_flag_down"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/checkBox_down" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_open_close_swipe_background_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_close_swipe_background_color" />

                <RadioGroup
                    android:id="@+id/radioGroup_choose_swipe_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioBtn_swipe_color_red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:buttonTint="@android:color/background_dark"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radioBtn_swipe_color_green"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_dark"
                        android:buttonTint="@android:color/background_dark"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/radioBtn_swipe_color_blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDark"
                        android:buttonTint="@android:color/background_dark"
                        android:checked="false" />

                    <RadioButton
                        android:id="@+id/radioBtn_swipe_color_yellow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_orange_dark"
                        android:buttonTint="@android:color/background_dark"
                        android:checked="false" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tree_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>
